feat(后端进阶篇): Q26 JVM 的内存模型是什么？各区域的作用和常见 OOM 是什么？